--- a/aboutus.html
+++ b/aboutus.html
@@ -29,7 +29,7 @@
     </header>
 
     <div class="container">
-        <div class="row row-content">
+        <div class="row">
             <div class="col-12 col-sm-12">
                <h3>About Us</h3>
                <hr>
