--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
                         <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
                     </div>
-                    <img class="d-flex mr-3 img-thumbnail"
+                    <img class="d-flex ml-3 img-thumbnail align-self-center"
                             src="img/buffet.png" alt="buffet">
                 </div>
             </div>
@@ -124,34 +124,34 @@
                                         <label class="form-check-label" for="one">1</label>
                                     </div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="numerOfGuests" id="two" value="1">
+                                        <input class="form-check-input" type="radio" name="numerOfGuests" id="two" value="2">
                                         <label class="form-check-label" for="two">2</label>
                                     </div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="numerOfGuests" id="three" value="1">
+                                        <input class="form-check-input" type="radio" name="numerOfGuests" id="three" value="3">
                                         <label class="form-check-label" for="three">3</label>
                                     </div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="numerOfGuests" id="four" value="1">
+                                        <input class="form-check-input" type="radio" name="numerOfGuests" id="four" value="4">
                                         <label class="form-check-label" for="four">4</label>
                                     </div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="numerOfGuests" id="five" value="1">
+                                        <input class="form-check-input" type="radio" name="numerOfGuests" id="five" value="5">
                                         <label class="form-check-label" for="five">5</label>
                                     </div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="numerOfGuests" id="six" value="1">
+                                        <input class="form-check-input" type="radio" name="numerOfGuests" id="six" value="6">
                                         <label class="form-check-label" for="six">6</label>
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="date" class="col-12 col-md-2 col-form-label">Date and Time</label>
-                                <div class="col-12 col-md-5">
-                                    <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                                <div class="col-12 col-md-4">
+                                    <input type="date" class="form-control" id="date" name="date" placeholder="Date">
                                 </div>
-                                <div class="col-12 col-md-5">
-                                    <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                                <div class="col-12 col-md-4">
+                                    <input type="time" class="form-control" id="time" name="time" placeholder="Time">
                                 </div>
                             </div>
                             <div class="form-group row">
