--- a/index.html
+++ b/index.html
@@ -76,6 +76,77 @@
         </div>
     </div>
 
+    <div id="reservationFormModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form id="reservation" class="form-check">
+                        <div class="form-group row">
+                            <label for="numberOfGuests" class="col-md-2 col-form-label">Number of Guests</label>
+                            <div class="col-md-10">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="numerOfGuests" id="one" value="1">
+                                    <label class="form-check-label" for="one">1</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="numerOfGuests" id="two" value="2">
+                                    <label class="form-check-label" for="two">2</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="numerOfGuests" id="three" value="3">
+                                    <label class="form-check-label" for="three">3</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="numerOfGuests" id="four" value="4">
+                                    <label class="form-check-label" for="four">4</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="numerOfGuests" id="five" value="5">
+                                    <label class="form-check-label" for="five">5</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="numerOfGuests" id="six" value="6">
+                                    <label class="form-check-label" for="six">6</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                                <label for="sectionChoice" class="col-md-2 col-form-label">Section</label>
+                                <div id="sectionChoice" class="col-md-10 btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-success active">
+                                        <input type="radio" name="options" id="option1" autocomplete="off" checked>Non-Smoking
+                                    </label>
+                                    <label class="btn btn-danger">
+                                        <input type="radio" name="options" id="option2" autocomplete="off">Smoking
+                                    </label>
+                                </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="date" class="col-12 col-md-2 col-form-label">Date and Time</label>
+                            <div class="col-12 col-md-4">
+                                <input type="date" class="form-control" id="date" name="date" placeholder="Date">
+                            </div>
+                            <div class="col-12 col-md-4">
+                                <input type="time" class="form-control" id="time" name="time" placeholder="Time">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="offset-md-2 col-md-10">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary">Reserve</button>
+                            </div>
+                        </div>
+                    </form> 
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header  class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -207,77 +278,6 @@
                             creating mouthwatering Indo-Italian fusion experiences.
                         </p>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div id="reservationFormModal" class="modal fade" role="dialog">
-        <div class="modal-dialog modal-lg" role="content">
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">Login </h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body">
-                    <form id="reservation" class="form-check">
-                        <div class="form-group row">
-                            <label for="numberOfGuests" class="col-md-2 col-form-label">Number of Guests</label>
-                            <div class="col-md-10">
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="numerOfGuests" id="one" value="1">
-                                    <label class="form-check-label" for="one">1</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="numerOfGuests" id="two" value="2">
-                                    <label class="form-check-label" for="two">2</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="numerOfGuests" id="three" value="3">
-                                    <label class="form-check-label" for="three">3</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="numerOfGuests" id="four" value="4">
-                                    <label class="form-check-label" for="four">4</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="numerOfGuests" id="five" value="5">
-                                    <label class="form-check-label" for="five">5</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="numerOfGuests" id="six" value="6">
-                                    <label class="form-check-label" for="six">6</label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                                <label for="sectionChoice" class="col-md-2 col-form-label">Section</label>
-                                <div id="sectionChoice" class="col-md-10 btn-group btn-group-toggle" data-toggle="buttons">
-                                    <label class="btn btn-success active">
-                                        <input type="radio" name="options" id="option1" autocomplete="off" checked>Non-Smoking
-                                    </label>
-                                    <label class="btn btn-danger">
-                                        <input type="radio" name="options" id="option2" autocomplete="off">Smoking
-                                    </label>
-                                </div>
-                        </div>
-                        <div class="form-group row">
-                            <label for="date" class="col-12 col-md-2 col-form-label">Date and Time</label>
-                            <div class="col-12 col-md-4">
-                                <input type="date" class="form-control" id="date" name="date" placeholder="Date">
-                            </div>
-                            <div class="col-12 col-md-4">
-                                <input type="time" class="form-control" id="time" name="time" placeholder="Time">
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <div class="offset-md-2 col-md-10">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                <button type="submit" class="btn btn-primary">Reserve</button>
-                            </div>
-                        </div>
-                    </form> 
                 </div>
             </div>
         </div>
